# Sienge-MCP

./: .env.example  .env.template  .flake8  .gitignore  .railwayignore  CHANGELOG.md  CHANGELOG_1.2.0.md  COMO_TESTAR.md  CORREÇÃO_META_COMPLETA.md  Checklist_de_Testes_-_Sienge_MCP.csv  Dockerfile  GUIA_ATUALIZACAO.md  LICENSE  MANIFEST.in  PUBLICADO_PYPI.md  PUBLICADO_v1.2.1.md  RAILWAY_DEPLOY.md  README.md  README_DEPLOY.md  app.py  atualizar.ps1  build-package.ps1  checklist_resultados.json  claude_config_http.json  claude_config_teste_local.json  claude_desktop_config.template.json  fix_commas.py  fix_final_syntax.py  fix_meta_parameter.py  fix_missing_commas.py  logs.1758648457100.json  mcp.json  package-lock.json  package.json  payload_initialize.json  pyproject.toml  railway.json  requirements.txt  resultadotest  setup.cfg  (+11 more)
.cursor/rules/: n8n-mcp-instructions.mdc
.github/: ABOUT.md  CICD_SETUP.md
.github/workflows/: auto-pypi-release.yml  tests-and-quality.yml
src/Instructions/: KPI-0000001  KPI-0000002  Main
src/sienge_mcp/: __init__.py  metadata.py  server.py  server2.py
src/sienge_mcp/utils/: logger.py
