[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sienge-ecbiesek-mcp"
version = "1.1.0"
description = "Sienge ECBIESEK MCP Server - Model Context Protocol integration for Sienge API (ECBIESEK Company)"
authors = [
    {name = "ECBIESEK", email = "ti@ecbiesek.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["sienge", "mcp", "claude", "api", "construction", "ecbiesek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Moizas951/Sienge-mcp"
Documentation = "https://github.com/Moizas951/Sienge-mcp#readme"
Repository = "https://github.com/Moizas951/Sienge-mcp.git"
Issues = "https://github.com/Moizas951/Sienge-mcp/issues"

[project.scripts]
sienge-ecbiesek-mcp = "sienge_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sienge_mcp = ["*.md", "*.txt", "*.json"]
